ISSUE #210 - Move registered to registerVerify

--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -3,7 +3,9 @@ div(ng-if="!vm.state.changing")
 		div(ng-if="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
 		div(ng-if="!vm.getLoggedOutUrl()", ng-switch="vm.notLoggedInToShow")
 			login(ng-switch-when="showLogin")
-			registered(ng-switch-when="showRegistered")
+			register-request(ng-switch-when="showRegisterRequest")
+			register-verify(ng-switch-when="showRegisterVerify", token="vm.registerVerifyToken")
+			password-forgot(ng-switch-when="showPasswordForgot")
 			password-change(ng-switch-when="showPasswordChange")
 	div(ng-if="vm.state.loggedIn")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
