--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -2,7 +2,10 @@ div(flex, layout="column")
 	md-content.md-whiteframe-1dp(aria-label="Registered", flex)
 		md-toolbar
 			.md-toolbar-tools
-				h2 Registered for 3D Repo
+				h2 Forgot password
 		.userContent(layout="column", layout-align="start center")
-			h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
-			md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+		md-input-container(md-no-float)
+			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
+		md-input-container(md-no-float)
+			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
+		md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Request Password Change
