--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -6,24 +6,32 @@ home {
     height: 100%;
 }
 
-home registered,
+home register-request,
+home register-verify,
+home password-forgot,
 home password-change {
     padding: 40px;
     display: block;
 }
 
-home registered .md-whiteframe-1dp,
+home register-request .md-whiteframe-1dp,
+home register-verify .md-whiteframe-1dp,
+home password-forgot .md-whiteframe-1dp,
 home password-change .md-whiteframe-1dp {
     border-radius: 4px;
 }
 
-home registered md-toolbar,
+home register-request md-toolbar,
+home register-verify md-toolbar,
+home password-forgot md-toolbar,
 home password-change md-toolbar {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 
-home registered .userContent,
+home register-request .userContent,
+home register-verify .userContent,
+home password-forgot .userContent,
 home password-change .userContent {
     padding: 20px;
 }
