--- a/frontend/registerVerify/jade/registerVerify.jade
+++ b/frontend/registerVerify/jade/registerVerify.jade
@@ -4,4 +4,4 @@ md-content.md-whiteframe-1dp(aria-label="Registered")
 			h2 Registered for 3D Repo
 	.userContent(layout="column", layout-align="start center")
 		h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
-		//md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+		md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
