ISSUE #210 - Improved registration and password pages to work with the API

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -35,3 +35,10 @@ home password-forgot .userContent,
 home password-change .userContent {
     padding: 20px;
 }
+
+home register-request .userContent h3,
+home register-verify .userContent h3,
+home password-forgot .userContent h3,
+home password-change .userContent h3 {
+    color: rgba(0, 0, 0, 0.7);
+}
