--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -4,9 +4,9 @@ div(ng-if="!vm.state.changing")
 		div(ng-if="!vm.getLoggedOutUrl()", ng-switch="vm.notLoggedInToShow")
 			login(ng-switch-when="showLogin")
 			register-request(ng-switch-when="showRegisterRequest")
-			register-verify(ng-switch-when="showRegisterVerify", token="vm.registerVerifyToken")
+			register-verify(ng-switch-when="showRegisterVerify", username="vm.username", token="vm.token")
 			password-forgot(ng-switch-when="showPasswordForgot")
-			password-change(ng-switch-when="showPasswordChange")
+			password-change(ng-switch-when="showPasswordChange", username="vm.username", token="vm.token")
 	div(ng-if="vm.state.loggedIn")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
 		div(ng-if="!vm.getLoggedInUrl()")
