--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -1,9 +1,15 @@
-.md-whiteframe-1dp(layout="column", layout-align="start center", flex, aria-label="Password Change")
+md-content.md-whiteframe-1dp(aria-label="Password Change", flex)
 	md-toolbar
 		.md-toolbar-tools
 			h2 Change Password
-	.userContent
-		md-input-container(md-no-float)
-			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
-		div
-			md-button.md-accent.md-raised(ng-click="vm.changePassword()") Set New Password
+	.userContent(layout="row", layout-align="center center")
+		div(flex="20", layout="row", layout-align="center")
+			div(layout="column", flex)
+				div(layout="column", layout-align="center center", ng-if="!vm.passwordChanged")
+					md-input-container.md-block(md-no-float)
+						input(type='password', ng-model='vm.newPassword', placeholder='New Password', ng-required, ng-keypress="vm.passwordChange($event)")
+					md-button.md-raised.md-accent(ng-click="vm.passwordChange()") Set New Password
+					h4(style="color:{{vm.messageColor}}") {{vm.message}}
+				div(layout="column", layout-align="center center", ng-if="vm.passwordChanged")
+					h4(style="color:{{vm.messageColor}}") {{vm.message}}
+					md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
