--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -1,11 +1,14 @@
-div(flex, layout="column")
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex)
-		md-toolbar
-			.md-toolbar-tools
-				h2 Forgot password
-		.userContent(layout="column", layout-align="start center")
-		md-input-container(md-no-float)
-			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
-		md-input-container(md-no-float)
-			input(type='password', ng-model='vm.user.password', placeholder='New Password', ng-required, ng-keypress="vm.changePassword($event)")
-		md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Request Password Change
+md-content.md-whiteframe-1dp(aria-label="Registered", flex)
+	md-toolbar
+		.md-toolbar-tools
+			h2 Forgot password
+	.userContent(layout="column", layout-align="start center")
+		div(flex="40", layout="column", layout-align="start")
+			h3 Please enter your username and email
+			md-input-container.md-block(md-no-float, flex)
+				input(type='text', ng-model='vm.username', placeholder='Username', ng-required)
+			md-input-container.md-block(md-no-float)
+				input(type='email', ng-model='vm.email', placeholder='Email', ng-required)
+			div(layout="column", layout-align="center center")
+				md-button.md-raised.md-accent(ng-click="vm.requestPasswordChange()") Request Password Change
+				h4(style="color:{{vm.messageColor}}") {{vm.message}}
