--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -12,7 +12,7 @@
 				h2.md-headline#loginSubTitle A scalable, open platform
 
 		// Register or login
-		div(flex="25", layout="row", layout-fill)
+		div(flex="30", layout="row", layout-fill)
 			// Login
 			div(layout="column", flex)
 				h3.loginTitle Log in
@@ -23,7 +23,7 @@
 				div(layout="row", layout-align="start" flex="none")
 					md-button.md-accent.md-raised(ng-click="vm.login()") Log In
 				#forgotPasswordButton(layout="row", layout-align="start" flex="none")
-					md-button.md-accent(ng-click="vm.forgotPassword()") Forgot password
+					md-button.md-accent(ng-click="vm.forgotPassword()") Forgot password?
 				h4.loginError {{vm.errorMessage}}
 
 			div(flex="5", layout="column", layout-align="center center")
@@ -38,10 +38,10 @@
 					input(type='email', ng-model='vm.newUser.email', placeholder='Email', ng-required, ng-keypress="vm.register($event)")
 				md-input-container(md-no-float)
 					input(type='password', ng-model='vm.newUser.password', placeholder='Password', ng-required ng-keypress="vm.register($event)")
-				div(layout="column", layout-align="start")
-					md-checkbox#tcCheckBox(ng-model="vm.newUser.tcAgreed" aria-label="Terms and conditions Checkbox") I agree to the Terms and Conditions
-					#tcButton(layout="row", layout-align="start")
-						md-button.md-accent(ng-click="vm.showTC()") Terms and Conditions
+				#tc(layout="row", layout-align="start center", flex)
+					md-checkbox(ng-model="vm.newUser.tcAgreed" aria-label="Terms and conditions Checkbox")
+					div(layout="row", layout-align="start")
+						md-button.md-accent(ng-click="vm.showTC()") I agree to the Terms and Conditions
 				#loginCaptcha(vc-recaptcha, key="vm.captchaKey", ng-model="vm.recaptchaResponse")
 				div(layout="row", layout-align="start")
 					md-button.md-accent.md-raised(ng-click="vm.register()") Register
