--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -1,9 +1,9 @@
-md-content.md-whiteframe-1dp(aria-label="Registered", flex)
-	md-toolbar
-		.md-toolbar-tools
-			h2 Forgot password
-	.userContent(layout="column", layout-align="start center")
-		div(flex="40", layout="column", layout-align="start")
+.homeUserContent(layout="row", layout-align="center", flex)
+	md-content.md-whiteframe-1dp(aria-label="Registered", flex="20")
+		md-toolbar
+			.md-toolbar-tools
+				h2 Forgot password
+		.userContent(layout="column")
 			h3 Please enter your username and email
 			md-input-container.md-block(md-no-float, flex)
 				input(type='text', ng-model='vm.username', placeholder='Username', ng-required)
