--- a/frontend/registerRequest/jade/registerRequest.jade
+++ b/frontend/registerRequest/jade/registerRequest.jade
@@ -1,6 +1,7 @@
-md-content.md-whiteframe-1dp(aria-label="Registered")
-	md-toolbar
-		.md-toolbar-tools
-			h2 Registration request for 3D Repo
-	.userContent(layout="column", layout-align="start center")
-		h3 Thank you for registering with 3D repo. A confirmation email has been sent to you. Please click on the link to confirm your registration
+.homeUserContent(layout="row", layout-align="center", flex)
+	md-content.md-whiteframe-1dp(aria-label="Registered", flex="30")
+		md-toolbar
+			.md-toolbar-tools
+				h2 Registration request for 3D Repo
+		.userContent(layout="column")
+			h3 Thank you for registering with 3D Repo. A confirmation email has been sent to you. Please click on the link to confirm your registration
