ISSUE #210 - reCaptcha works with backend, styling the projects list

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -15,7 +15,8 @@ div(ng-switch="vm.toShow", layout-fill)
 					p {{vm.email}}
 
 			span(flex="5")
-			md-tabs(md-border-bottom, flex="50")
+			account-projects(account="vm.account", projects-grouped='vm.projectsGrouped', flex="50")
+			//md-tabs(md-border-bottom, flex="50")
 				md-tab#accountProjectsTab(label="Projects")
 					account-projects(flex account="vm.account" projects-grouped='vm.projectsGrouped')
 				md-tab(label="Profile")
