ISSUE #210 - Making projects list and profile card work

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -82,6 +82,10 @@ account-projects .projects md-icon {
 }
 
 /** Account Profile ***************************************************************************************************/
+account-profile {
+  padding-left: 40px;
+}
+
 account-profile .dataContainer {
   padding: 10px;
 }
