--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -55,12 +55,6 @@ account-projects md-list {
   padding: 0;
 }
 
-account-projects .accounts p,
-account-projects .accounts md-icon {
-  font-size: 20px;
-  color: rgba(0,0,0,0.6);
-}
-
 account-projects .projects {
   margin-left: 40px;
 }
@@ -104,7 +98,7 @@ account-profile p {
   color: rgba(0,0,0,0.6);
 }
 
-/** Avatar Image *****************************************************************************************************/
+/** Avatar Image ******************************************************************************************************/
 .account-avatar-image {
 	width: 100%;
 }
@@ -121,4 +115,15 @@ logout md-icon {
   text-shadow: 0 0 2px rgba(0,0,0,0.5);
   font-size: 20px !important;
   outline: none;
+}
+
+/** New Project Dialog ************************************************************************************************/
+.newProjectDialog {
+  min-width: 350px;
+  min-height: 450px;
+  overflow: hidden;
+}
+
+.newProjectDialog #newProjectIcon {
+  margin-right: 10px;
 }
