--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -6,11 +6,11 @@ div(ng-if="!vm.state.changing")
 	div(ng-if="!vm.state.loggedIn")
 		div(ng-if="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
 		div(ng-if="!vm.getLoggedOutUrl()", ng-switch="vm.notLoggedInToShow")
-			login(ng-switch-when="showLogin")
-			register-request(ng-switch-when="showRegisterRequest")
-			register-verify(ng-switch-when="showRegisterVerify", username="vm.username", token="vm.token")
-			password-forgot(ng-switch-when="showPasswordForgot")
-			password-change(ng-switch-when="showPasswordChange", username="vm.username", token="vm.token")
+			login(ng-switch-when="login")
+			register-request(ng-switch-when="registerRequest")
+			register-verify(ng-switch-when="registerVerify", username="vm.username", token="vm.token")
+			password-forgot(ng-switch-when="passwordForgot")
+			password-change(ng-switch-when="passwordChange", username="vm.username", token="vm.token")
 	div(ng-if="vm.state.loggedIn")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
 		div(ng-if="!vm.getLoggedInUrl()")
