--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -49,8 +49,11 @@
 							div(layout="row", layout-align="start")
 								md-button.md-accent(ng-click="vm.showTC()") I agree to the Terms and Conditions
 						#loginCaptcha(vc-recaptcha, key="vm.captchaKey", ng-model="vm.reCaptchaResponse", ng-if="vm.useReCapthca")
-						div(layout="row", layout-align="start")
-							md-button.md-accent.md-raised(ng-click="vm.register()") Register
+						div(layout="row", layout-align="start center")
+							md-button.md-accent.md-raised(ng-click="vm.register()", ng-disabled="vm.registering") Register
+							#registerWait(ng-if="vm.registering", layout="row", layout-align="start center")
+								p Please wait...
+								md-progress-circular(md-mode="indeterminate")
 						h4.loginError {{vm.registerErrorMessage}}
 
 		//span(flex="35")
