--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -1,31 +1,35 @@
+input(type="file", id="fileUploader")
 .homeUserContent
 	md-content.md-whiteframe-1dp(aria-label="Projects", flex)
 		md-toolbar
 			.md-toolbar-tools
 				h2 Projects
+				span(flex)
+				div(layout="row", layout-align="start center")
+					md-button.md-accent.md-fab.md-mini(aria-label="New Project" ng-click="vm.newProject()")
+						md-icon.angular-material-icons add
 
-		div(layout="column")
-			md-list(flex)
-				md-list-item(ng-repeat="account in vm.accounts")
-					.accounts(flex)
-						div(layout="row", layout-align="space-between")
-							md-list-item(ng-click="vm.toggleProjectsList($index)", flex)
-								md-button.md-icon-button(aria-label="Folder")
-									md-icon(ng-if="!account.showProjects", md-font-icon="fa fa-folder-o")
-									md-icon(ng-if="account.showProjects", md-font-icon="fa fa-folder-open-o")
-								p {{account.name}}
-							md-button.md-accent.md-fab.md-mini(aria-label="New Project" ng-click="vm.newProject()")
-								md-icon.angular-material-icons add
+		md-list#accountList(flex)
+			md-list-item(ng-repeat="account in vm.accounts")
+				.accounts(flex)
+					md-list-item(ng-click="vm.toggleProjectsList($index)", flex)
+						md-button.md-icon-button(aria-label="Folder")
+							md-icon.angular-material-icons {{account.showProjectsIcon}}
+						p {{account.name}}
 
-						md-list.projects(ng-if="account.showProjects")
-							div(layout="row", layout-align="space-between")
-								md-list-item.md-1-line(ng-repeat="project in account.projects" ng-click="vm.goToProject(account.name, project.name)")
-									div(layout="row", flex="100", layout-align="start")
-										md-icon(md-font-icon="fa fa-cube")
+					md-list.projects(ng-if="account.showProjects")
+						div(layout="row", ng-repeat="project in account.projects", layout-align="start center")
+							md-list-item.md-1-line(ng-click="vm.goToProject(account.name, project.name)", flex)
+								div(layout="row", flex)
+									div(layout="row", layout-align="start center")
+										md-icon.angular-material-icons dashboard
 										p.projectName(flex) {{project.name}}
-										//p.projectTimestamp(flex="20") {{project.timestamp}}
-										//md-button.md-accent(ng-click="vm.b4f(account.name, project.name)" ng-if="project.bif4FreeEnabled") B4F
-								md-button.md-accent.md-fab.md-mini(aria-label="Upload" ng-click="vm.uploadModel()")
-									md-icon.angular-material-icons backup
+							p.projectTimestamp(flex="20") {{project.timestamp}}
+							//md-button.md-accent(ng-click="vm.b4f(account.name, project.name)" ng-if="project.bif4FreeEnabled") B4F
+							md-button.md-accent.md-icon-button.projectUploadButton(
+								aria-label="Upload"
+								ng-click="vm.setupFileUpload(project.name)"
+								ng-if="project.canUpload")
+								md-icon.angular-material-icons cloud_upload
 
 					md-divider
