ISSUE #210 - Removed need to list user pages in home directive

--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -5,12 +5,8 @@ img#homeBackground(src="/public/images/viewer_background.jpg")
 div(ng-if="!vm.state.changing")
 	div(ng-if="!vm.state.loggedIn")
 		div(ng-if="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
-		div(ng-if="!vm.getLoggedOutUrl()", ng-switch="vm.notLoggedInToShow")
-			login(ng-switch-when="login")
-			register-request(ng-switch-when="registerRequest")
-			register-verify(ng-switch-when="registerVerify", username="vm.username", token="vm.token")
-			password-forgot(ng-switch-when="passwordForgot")
-			password-change(ng-switch-when="passwordChange", username="vm.username", token="vm.token")
+		#homeLoggedOut(ng-if="!vm.getLoggedOutUrl()")
+
 	div(ng-if="vm.state.loggedIn")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
 		div(ng-if="!vm.getLoggedInUrl()")
