--- a/frontend/registerRequest/jade/registerRequest.jade
+++ b/frontend/registerRequest/jade/registerRequest.jade
@@ -4,4 +4,6 @@
 			.md-toolbar-tools
 				h2 Registration request for 3D Repo
 		.userContent(layout="column")
-			h3 Thank you for registering with 3D Repo. A confirmation email has been sent to you. Please click on the link to confirm your registration
+			h3 Thank you for registering with 3D Repo.
+			h3 Check your inbox for an email confirming your account. You must click the link in the email to complete the registration process.
+			h3 If you do not receive an email within a few minutes, check your Spam folder to ensure it was not incorrectly moved.
