--- a/frontend/registerVerify/jade/registerVerify.jade
+++ b/frontend/registerVerify/jade/registerVerify.jade
@@ -6,5 +6,6 @@
 		.userContent(layout="column")
 			h3(ng-if="!vm.verified") Please wait...
 			div(ng-if="vm.verified", layout="column", layout-align="start center")
-				h3 Congratulations. You have successfully registered for 3D Repo. You may now login to you account.
+				h3 Congratulations.
+				h3 You have successfully registered for 3D Repo. You may now login to you account.
 				md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
